css/common.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    margin: 0%;
    background-color: black;
}

main {
    display: flex;
    flex-direction: column;
    min-height: 70vh;
}

main section {
    margin-top: 7vh;
}

#nav {
    display: flex;
    background: rgba(0, 0, 0, 0.7);
    backdrop-filter: blur(10px);
    padding-bottom: 10px;
    flex-direction: row;
    justify-content: space-evenly;
    position: fixed;
    width: 100%;
}

.navLink {
    text-decoration: none;
    color: white;
    font-size: 20px;
    font-weight: 600;
    padding-top: 22px;
    font-family: 'Rapier Zero Hollow', sans-serif;
}

.navLink:hover {
    color: orange;
    text-decoration: underline;
}

/* Stylinfg for the footer Section*/
footer {
    background-color: #063970;
}

#copyright {
    font-family: 'Prompt', sans-serif;
}

#footerTitle {
    font-family: 'Rapier Zero Hollow', sans-serif;
}

/* Stylinfg for the footer Section*/
#footerContainer {
    width: 100%;
    padding: 70px 30px 20px;
}

#footerTitle {
    color: white;
    text-align: center;
    font-size: 3.5rem;
    padding-bottom: 20px;
}

#socialIcons {
    display: flex;
    justify-content: center;
}

#socialIcons a {
    text-decoration: none;
    padding: 10px;
    background-color: black;
    margin: 10px;
    border-radius: 50%;
    width: 70px;
    height: 70px;
}

#socialIcons a i {
    font-size: 2em;
    color: #111;
    opacity: 0.9;
}

.smIcon {
    width: 50px;
    height: 50px;
}

#socialIcons a:hover {
    background-color: #111;
    transition: 0.5s;
}

#socialIcons a:hover i {
    transition: 0.5s;
}

#footerBottom p {
    color: white;
    text-align: center;
    padding-top: 20px;
    padding-bottom: 20px;
}

#designer {
    opacity: 0.7;
    text-transform: uppercase;
    letter-spacing: 1px;
    font-weight: 400;
    margin: 0px 5px;
}

